# mcpmark

./: .gitignore  .travis.yml  README.md  build_grades_hw02.py  check_unpack.py  combine_components.py  cp_model.py  echo_config.py  extract_manual.py  extract_plots.py  grade_component.py  grade_nbs.py  grade_oknb.py  mcp_utils.py  mk_minimal_csv.py  open_plots.py  parse_manual_scores.py  plot_criteria.md  prepare_components.py  prepare_grading.py  pyproject.toml  rename_named_dirs.py  report.md  requirements.txt  rewrite_components.py  rewrite_ta_totals.py  run_notebooks.py  spe_components.py  write_plot_marks.py
.github/workflows/: testing.yml
doc/: assign_config.yaml  make_release.md  marking.md
mcpmark/: __init__.py  mcputils.py  rnbconv.py
mcpmark/cli/: allow_raise.py  build_exercises.py  categories.py  check_one.py  check_unpack.py  combine_components.py  cp_models.py  export_marks.py  extract_manual.py  extract_plots.py  find_duplicates.py  grade_component.py  grade_nbs.py  grade_oknb.py  make_feedback.py  mk_minimal_csv.py  prepare_components.py  rename_named_dirs.py  scale_combine.py  var_check.py
mcpmark/tests/: test_mcputils.py  test_rnbconv.py
mcpmark/tests/data/: assign_config.yaml  blank_comp_config.yaml  empty_comp_config.yaml  one_comp_config.yaml
scripts/: assessors_information.py  combine_components.py  cp_models.py  do_grading.py  extract_plots.py  find_allocate_spouses.py  grade_oknb.py  parse_manual_scores.py  parts2component.py  spe_components.py
tests/: test_mcp_utils.py
